--- a/styles/get_involved.css
+++ b/styles/get_involved.css
@@ -32,6 +32,14 @@
 
 /* styles that change
 --------------------*/
+@media only screen and (min-width: 768px) {
+  /* Main
+--------------------*/
+  .support-grid {
+    width: 90%;
+    margin: 0 auto;
+  }
+}
 
 @media only screen and (min-width: 992px) {
   /* Main
