--- a/styles/variables.css
+++ b/styles/variables.css
@@ -11,7 +11,7 @@
   --dark-green: #034638;
   --blue: #007298;
   --orange: #dc4405;
-  --teal: #3d6a6b;
+  --footer-color: #3d6a6b;
   --light-grey: #e8e8e8;
   --main-bg: #FFFFFB;
   --white: #ffffff;
