--- a/styles/in_common.css
+++ b/styles/in_common.css
@@ -264,6 +264,7 @@ header {
   display: flex;
   justify-content: flex-start;
   margin-bottom: 0;
+  box-shadow: 0 6px 12px #00000029;
 }
 
 .menu-link {
@@ -565,8 +566,8 @@ ul li {
 
 .newsletter-wrapper {
   width: 100%;
-  background: rgb(60,60,60);
-  background: linear-gradient(129deg, rgba(60,60,60,1) 0%, rgba(37,37,37,1) 100%);
+  background: rgb(37,37,37);
+  background: linear-gradient(180deg, rgba(37,37,37,1) 0%, rgba(38,60,60,1) 100%);
   /* background-color: var(--dark); */
   /* background-image: url(../images/newsletter_mobile.jpg);
   background-size: cover;
@@ -675,6 +676,7 @@ ul li {
 
 .info-box {
   background-color: #f1f1f1;
+  background-color: #DAE0E8;
   color: var(--dark);
   padding: 1rem 5%;
   /* border-radius: 5px; */
@@ -730,7 +732,7 @@ ul li {
 --------------------*/
 footer {
   flex-shrink: 0;
-  background-color: var(--teal);
+  background-color: var(--footer-color);
   /* font-family: var(--sofia); */
 }
 
