--- a/styles/exhibitions.css
+++ b/styles/exhibitions.css
@@ -12,6 +12,8 @@
 }
 
 .space-wrapper {
+  width: 90%;
+  margin: 0 auto;
   display: flex;
   flex-direction: column;
   background-color: var(--dark);
@@ -121,10 +123,10 @@
 
   /* Main
 --------------------*/
-  .space-wrapper {
+  /* .space-wrapper {
     width: 90%;
     margin: 0 auto;
-  }
+  } */
 
    .gallery-wrapper {
     gap: 2rem;
