--- a/styles/variables.css
+++ b/styles/variables.css
@@ -22,7 +22,7 @@
   --center-align: 0 auto 0 auto;
   --body-text: "sofia-pro", "helvetica", "arial", "sans-serif";
   --main-heading: "proxima-nova", "helvetica", "arial", "sans-serif";
-  --main-sub-heading: "futura-pt",
+  --main-sub-heading: "skolar-sans-latin",
     serif;
   --button-text: "proxima-soft", "helvetica", "arial", "sans-serif";
 }
