--- a/styles/in_common.css
+++ b/styles/in_common.css
@@ -457,7 +457,7 @@ ul li {
   background-color: var(--main-bg);
   margin: 0 auto;
   padding-top: 2rem;
-  padding-bottom: 4rem;
+  padding-bottom: 6rem;
 }
 
 .content-container {
@@ -471,9 +471,9 @@ ul li {
 .header {
   width: 90%;
   margin: 0 auto;
-  display: flex;
+  /* display: flex;
   flex-direction: column;
-  gap: 1rem;
+  gap: 1rem; */
   padding-bottom: 2.5rem;
 }
 
@@ -501,13 +501,18 @@ ul li {
 }
 
 .main-heading-lead {
+  display: inline-block;
+  font-family: var(--main-sub-heading);
   font-size: 1.125rem;
-  font-weight: bold;
-  margin: 0;
-  padding: 0;
+  font-weight: 600;
+  /* font-style: italic; */
+  margin: 1rem 0 0 0;
+  padding: 0.5rem 1rem;
+  background-color: #a2006740;
+  /* background: linear-gradient(90deg, rgba(37,37,37,1) 75%, rgba(255,255,255,1) 100%); */
+  /* box-shadow: 3px 6px 12px rgba(162,0,103,1); */
   color: var(--dark);
-  /* border-bottom: 2px solid #C33764; */
-  /* padding-left: 0.75rem; */
+  /* border-top: 2px solid #51515140; */
 }
 
 .heading-divider {
@@ -517,6 +522,7 @@ ul li {
   opacity: 0.5;
   margin: 0;
   padding: 0;
+  display: none;
 }
 
 .cta-wrapper {
@@ -689,10 +695,14 @@ ul li {
   padding: 0;
 }
 
-.info-box-sub-heading {
+/* .info-box-sub-heading {
   font-size: 1.25rem;
   margin: 0;
   padding: 1rem 0 0 0;
+} */
+
+.info-box p {
+  font-size: 1rem;
 }
 
 .gallery-section {
@@ -995,18 +1005,31 @@ footer {
     width: 85%;
   }
 
+  .content-container {
+    gap: 5rem;
+  }
+
   .main-heading {
     font-size: 2.5rem;
     /* text-align: center; */
   }
 
   .main-heading-lead {
-    font-size: 1.375rem;
+    font-size: 1.25rem;
     padding-right: 3rem;
   }
 
   .info-box {
     padding: 1.5rem;
+  }
+
+  .info-box-heading {
+    font-size: 1.375rem;
+
+  }
+
+  .info-box p {
+    font-size: 1.125rem;
   }
 
   .newsletter-label {
