--- a/styles/explore.css
+++ b/styles/explore.css
@@ -9,8 +9,8 @@
 }
 
 #info-box-kids {
-  background-color: var(--blue);
-  color: var(--white);
+  /* background-color: var(--blue);
+  color: var(--white); */
   border-radius: 0;
 }
 
