--- a/styles/in_common.css
+++ b/styles/in_common.css
@@ -469,23 +469,21 @@ ul li {
 }
 
 .header {
-  /* width: 90%; */
-  /* margin: 0 auto; */
-  /* display: flex;
-  flex-direction: column;
-  gap: 1rem; */
-  padding-bottom: 2.5rem;
+  color: var(--dark);
+  margin-bottom: 2.5rem;
+  padding-right: 5%;
 }
 
 .main-heading-wrapper {
   display: flex;
   gap: 1rem;
   padding: 1rem 0;
+  background: rgb(241,241,241);
+  background: linear-gradient(90deg, rgba(241,241,241,1) 0%, rgba(255,255,255,1) 100%); 
 }
 
 .main-heading-left {
   width: 0.75rem;
-  /* background-image: linear-gradient(to right, #02AAB0 0%, #00CDAC 100%); */
   background-color: #C33764;
   flex-shrink: 0;
   margin: -1rem 0 -1rem 0;
@@ -495,28 +493,17 @@ ul li {
   font-family: var(--main-heading);
   font-size: 1.75rem;
   font-weight: 600;
-  color: var(--dark);
   margin: 0;
   padding: 0;
 }
 
 .main-heading-lead {
-  display: inline-block;
   font-family: var(--main-sub-heading);
   font-size: 1.125rem;
   font-weight: 600;
-  /* font-style: italic; */
-  margin-top: 2rem;
-  padding: 0.75rem 1rem;
-  /* padding: 0.5rem 1rem; */
-  /* background-color: #a2006740; */
-  /* background: linear-gradient(90deg, rgba(37,37,37,1) 75%, rgba(255,255,255,1) 100%); */
-  /* box-shadow: 3px 6px 12px rgba(162,0,103,1); */
-  /* background-color: var(--info-box-bg); */
-  background-color: #C33764;
-  color: var(--white);
-  /* opacity: 0.5; */
-  /* border-top: 2px solid #C33764; */
+  font-style: italic;
+  margin-top: 0.5rem;
+  padding: 0.5rem 1rem;
 }
 
 .heading-divider {
@@ -537,7 +524,8 @@ ul li {
   gap: 1rem;
   text-align: center;
   padding: 1rem;
-  /* background: linear-gradient(270deg, rgba(60,60,60,1) 0%, rgba(37,37,37,1) 100%); */
+  background: rgb(241,241,241);
+  background: linear-gradient(270deg, rgba(241,241,241,1) 0%, rgba(255,255,255,1) 100%);
 }
 
 .cta-wrapper p {
@@ -547,7 +535,7 @@ ul li {
   text-transform: uppercase;
   margin: 0;
   padding: 0;
-  color: var(--dark)
+  color: #02AAB0;
 }
 
 .button {
@@ -560,9 +548,6 @@ ul li {
   border: none;
   border-radius: 5px;
   background-image: linear-gradient(to right, #02AAB0 0%, #00CDAC 51%, #02AAB0 100%);
-  /* background-image: linear-gradient(to right, #C33764 0%, #1D2671 51%, #C33764 100%); */
-  /* background-image: linear-gradient(to right, #00c6ff 0%, #0072ff 51%, #00c6ff 100%); */
-  /* box-shadow: 0 0 20px #eee; */
   background-size: 200% auto;
   color: var(--white);
   padding: 0.75rem 2rem;
@@ -579,12 +564,6 @@ ul li {
   width: 100%;
   background: rgb(37,37,37);
   background: linear-gradient(180deg, rgba(37,37,37,1) 0%, rgba(38,60,60,1) 100%);
-  /* background-color: var(--dark); */
-  /* background-image: url(../images/newsletter_mobile.jpg);
-  background-size: cover;
-  background-repeat: no-repeat;
-  margin-top: 2rem; */
-  /* border-radius: 100px 0 0 0; */
 }
 
 /* .blur {
@@ -645,8 +624,6 @@ ul li {
   font-family: var(--sofia);
   font-size: 1.125rem;
   background-image: linear-gradient(to right, #02AAB0 0%, #00CDAC 51%, #02AAB0 100%);
-  /* background-image: linear-gradient(to right, #C33764 0%, #1D2671 51%, #C33764 100%);
-  background-image: linear-gradient(to right, #00c6ff 0%, #0072ff 51%, #00c6ff 100%); */
   background-size: 200% auto;
   border: none;
   border-radius: 0 5px 5px 0;
@@ -679,20 +656,9 @@ ul li {
   padding: 5px;
 }
 
-/* .heading-box {
-  background-color: var(--dark);
-  color: var(--white);
-  padding: 1rem;
-} */
-
 .info-box {
-  /* background-color: var(--info-box-bg); */
-  /* background: rgb(241,241,241);
-  background: radial-gradient(circle, rgba(241,241,241,1) 50%, rgba(220,220,220,1) 100%); */
-  background: rgb(241,241,241);
-  background: radial-gradient(circle, rgba(241,241,241,1) 50%, rgba(220,220,220,1) 100%);
+  background-color: var(--info-box-bg);
   padding: 1rem 5%;
-  /* border-radius: 5px; */
 }
 
 .info-box-heading {
@@ -703,12 +669,6 @@ ul li {
   color: var(--dark);
 }
 
-/* .info-box-sub-heading {
-  font-size: 1.25rem;
-  margin: 0;
-  padding: 1rem 0 0 0;
-} */
-
 .info-box p {
   font-size: 1rem;
   color: var(--dark);
@@ -718,16 +678,6 @@ ul li {
   width: 100%;
   margin: 0 auto;
 }
-
-/* .gallery-wrapper {
-  margin: 2rem auto;
-  display: grid;
-  grid-template-columns: 1fr 1fr;
-  grid-template-rows: auto auto auto auto;
-  align-items: center;
-  justify-content: center;
-  gap: 1rem;
-} */
 
 .gallery-wrapper figure,
 .gallery-wrapper img {
@@ -752,7 +702,6 @@ ul li {
 footer {
   flex-shrink: 0;
   background-color: var(--footer-bg);
-  /* font-family: var(--sofia); */
 }
 
 .footer-wrapper {
@@ -907,18 +856,6 @@ footer {
 .image-box, .image-box img {
   border-radius: 5px;
 }
-  /* .main-heading-lead {
-    padding-left: 0.75rem;
-  } */
-/* .gallery-wrapper {
-  grid-template-columns: 1fr 1fr 1fr;
-  grid-template-rows: auto auto;
-} */
-
-  /* .newsletter-wrapper {
-    background-image: url(../images/newsletter.jpg);
-    border-radius: 0 200px 0 0;
-  } */
 
   /* Footer
 --------------------*/
@@ -945,11 +882,12 @@ footer {
 --------------------*/
   .main-wrapper {
     width: 90%;
+    padding-top: 3rem;
   }
 
   .header {
     width: 90%;
-    margin: 0 auto;
+    margin: 0 auto 2rem auto;
   }
 
   .main-sub-heading {
@@ -1029,9 +967,7 @@ footer {
   }
 
   .main-heading-lead {
-    max-width: 700px;
     font-size: 1.25rem;
-    padding-right: 3rem;
   }
 
   .info-box {
