--- a/styles/variables.css
+++ b/styles/variables.css
@@ -15,7 +15,7 @@
   /* --light-grey: #e8e8e8; */
   --main-bg: #FFFFFB;
   --navbar-color: #05778b;
-  --info-box-bg: #DAE0E8;
+  --info-box-bg: #f1f1f1;
   --footer-bg: #3d6a6b;
   --white: #ffffff;
   --sofia: "sofia-pro", "helvetica", "arial", "sans-serif";
