--- a/styles/in_common.css
+++ b/styles/in_common.css
@@ -17,7 +17,7 @@ body {
   display: flex;
   flex-direction: column;
   background-color: white;
-  color: #000;
+  color: var(--dark);
   font-family: var(--body-text);
   font-size: 1rem;
   width: 100%;
@@ -134,7 +134,7 @@ a {
   text-decoration: underline;
 }
 
-.modal-button {
+#modal-button {
   margin-top: 1rem;
   width: 100%;
 }
@@ -202,22 +202,22 @@ header {
   align-self: flex-end;
 }
 
-.header-search-form {
+/* .header-search-form {
   display: flex;
 }
 
 .header-search-form input {
   padding: 0.5rem;
   font-size: 1.125rem;
-}
+} */
 
-.header-search-button {
+/* .header-search-button {
   border: none;
   border-radius: 0 3px 3px 0;
   cursor: pointer;
   padding: 0.75rem;
   background-color: var(--dark-blue);
-}
+} */
 
 .time-wrapper {
   display: flex;
@@ -322,28 +322,16 @@ header {
    margin: 1rem 0;
  }
 
- .ticket-button {
+ #ticket-button {
   display: flex;
   align-items: center;
   gap: 1rem;
   padding: 0.5rem 1rem;
-  background-image: linear-gradient(to right, #02AAB0 0%, #00CDAC 51%, #02AAB0 100%);
-  /* background-image: linear-gradient(to right, #C33764 0%, #1D2671 51%, #C33764 100%);
-  background-image: linear-gradient(to right, #00c6ff 0%, #0072ff 51%, #00c6ff 100%); */
-  background-size: 200% auto;
-  color: #fff;
   font-family: var(--button-text);
   border: none;
-  border-radius: 5px;
-  font-size: 1.125rem;
-  /* text-transform: uppercase; */
   cursor: pointer;
   transition: 0.5s;
   justify-self: flex-end;
- }
-
- .ticket-button:hover {
-  background-position: right center;
  }
 
  .ticket-icon {
@@ -415,7 +403,7 @@ ul li {
 
 .error-message {
   text-align: left;
-  color: #be3e35;
+  color: #fb655a;
 }
 
 .error-message:before {
@@ -552,18 +540,19 @@ ul li {
   color: var(--white);
   padding: 0.75rem 2rem;
   margin: 0;
+  box-shadow: 0 6px 12px #00000029;
   transition: 0.5s;
 }
 
 .button:hover {
   background-position: right center;
+  box-shadow: none;
 }
 
 
 .newsletter-wrapper {
   width: 100%;
-  background: rgb(37,37,37);
-  background: linear-gradient(180deg, rgba(37,37,37,1) 0%, rgba(38,60,60,1) 100%);
+  background-color: var(--dark);
 }
 
 /* .blur {
@@ -621,39 +610,25 @@ ul li {
   bottom: 0;
   right: 0;
   flex: 1;
-  font-family: var(--sofia);
-  font-size: 1.125rem;
-  background-image: linear-gradient(to right, #02AAB0 0%, #00CDAC 51%, #02AAB0 100%);
-  background-size: 200% auto;
-  border: none;
   border-radius: 0 5px 5px 0;
-  color: #fff;
-  cursor: pointer;
   padding: 0.5rem 1rem;
-  transition: 0.5s;
-  
-}
-
-#sign-up-button:hover {
-  background-position: right center;
 }
 
 #newsletter-error {
   position: absolute;
-  bottom: 10px;
-  left: 0;
+  top: 2.5rem;
 }
 
 .newsletter-success {
   width: 100%;
   font-size: 1.125rem;
-  background-color: #034638bf;
+  background-color: #19a184bf;
   border: 2px solid var(--dark-green);
   border-radius: 5px;
   color: white;
   display: none;
   margin-top: 1rem;
-  padding: 5px;
+  padding: 0.5rem 1rem;
 }
 
 .info-box {
@@ -666,13 +641,12 @@ ul li {
   font-size: 1.25rem;
   margin: 0;
   padding: 0;
-  color: var(--dark);
 }
 
-.info-box p {
+/* .info-box p {
   font-size: 1rem;
   color: var(--dark);
-}
+} */
 
 .gallery-section {
   width: 100%;
@@ -702,6 +676,7 @@ ul li {
 footer {
   flex-shrink: 0;
   background-color: var(--footer-bg);
+  
 }
 
 .footer-wrapper {
@@ -713,17 +688,14 @@ footer {
   color: #fff;
   padding-top: 2rem;
   padding-bottom: 2rem;
+  
 }
 
 .footer-container ul {
   margin-top: 0;
 }
 
-.footer-container ul li {
-  list-style: none;
-}
-
-.footer-container p {
+.footer-wrapper div p {
   margin: 0;
 }
 
@@ -733,6 +705,7 @@ footer {
   font-size: 1.125rem;
   margin: 0;
   padding: 0 0 0.5rem 0;
+  color: rgb(169, 255, 235);
 }
 
 .footer-icon-list {
@@ -753,9 +726,17 @@ footer {
   gap: 0.25rem;
   padding: 0;
   margin: 0;
+  
 }
 
-.footer-list a {
+.footer-links-list li {
+  list-style: disc;
+  padding: 0;
+  margin: 0 0 0 1rem;
+  color: inherit;
+}
+
+.footer-links-list a {
   text-decoration: underline;
 }
 
@@ -985,11 +966,6 @@ footer {
 
   .newsletter-label {
     font-size: 1.125rem;
-  }
-
-  #newsletter-error {
-    position: absolute;
-    bottom: -30px;
   }
 
   /* Footer
