--- a/styles/in_common.css
+++ b/styles/in_common.css
@@ -115,7 +115,7 @@ a {
   padding: 1.5rem 1.5rem 2rem 1.5rem;
   display: flex;
   flex-direction: column;
-  gap: 1.5rem;
+  gap: 1rem;
 }
 
 /* form {
@@ -169,7 +169,7 @@ input, select, textarea {
 
 input:focus {
   outline: none;
-  border: 3px solid #003057;
+  border: 3px solid var(--input-focus-col);
 }
 
 textarea {
@@ -186,9 +186,8 @@ header {
   width: 85%;
   background-color: #fff;
   display: flex;
-  flex-direction: column;
   align-items: center;
-  justify-content: center;
+  justify-content: space-between;
   margin: 0 auto;
   padding: 0.75rem 0;
   gap: 0.5rem;
@@ -200,6 +199,19 @@ header {
   align-items: flex-end;
   gap: 0.5rem 1.5rem;
   align-self: flex-end;
+}
+
+.logo-wrapper {
+  display: flex;
+  align-items: center;
+  gap: 0.5rem;
+}
+
+.logo-text {
+  font-family: var(--logo-text);
+  font-weight: bold;
+  font-size: 2rem;
+  color: var(--dark-blue);
 }
 
 /* .header-search-form {
@@ -240,14 +252,14 @@ header {
 
 .logo {
   display: block;
-  width: 250px;
-  margin: 0 auto;
+  width: 3rem;
+  margin: 0;
   padding: 0;
 }
 
 .logo img {
   display: block;
-  width: 250px;
+  width: 3rem;
 }
 
 .navbar {
@@ -339,6 +351,7 @@ header {
  }
 
  .ticket-form {
+  width: 50%;
   display: flex;
   flex-direction: column;
   gap: 1rem;
@@ -414,9 +427,9 @@ ul li {
   display: none;
 }
 
-#success-message {
+/* #success-message {
   visibility: hidden;
-}
+} */
 
 .fading-background {
   height: 100%;
@@ -538,7 +551,7 @@ ul li {
   background-image: linear-gradient(to right, #02AAB0 0%, #00CDAC 51%, #02AAB0 100%);
   background-size: 200% auto;
   color: var(--white);
-  padding: 0.75rem 2rem;
+  padding: 0.5rem 2rem;
   margin: 0;
   box-shadow: 0 6px 12px #00000029;
   transition: 0.5s;
@@ -589,20 +602,20 @@ ul li {
 #newsletter-input {
   flex: 3;
   font-size: 1rem;
-  border: 3px solid #0030574d;
+  /* border: 3px solid #0030574d; */
   border-radius: 0 7px 7px 0;
   padding: 0.75rem 1rem;
-  outline: none;
+  /* outline: none; */
 }
 
 .newsletter-label {
   font-weight: bold;
-  color: #fff;
+  color: var(--text-highlight-col);
 }
 
-#newsletter-input:focus {
+/* #newsletter-input:focus {
   border-color: #02AAB0;
-}
+} */
 
 #sign-up-button {
   position: absolute;
@@ -622,7 +635,7 @@ ul li {
 .newsletter-success {
   width: 100%;
   font-size: 1.125rem;
-  background-color: #19a184bf;
+  background-color: var(--success-color);
   border: 2px solid var(--dark-green);
   border-radius: 5px;
   color: white;
@@ -778,11 +791,6 @@ footer {
 @media only screen and (min-width: 576px) {
   /* Header
 --------------------*/
-  .header-content-wrapper {
-    flex-direction: row;
-    align-items: center;
-  }
-
   .modal {
     right: 0.5rem;
   }
@@ -822,6 +830,11 @@ footer {
     flex-direction: row;
     align-items: center;
     justify-content: space-between;
+  }
+
+  .header-content-wrapper {
+    flex-direction: row;
+    align-items: center;
   }
 
   .nav-icons-wrapper {
@@ -965,7 +978,7 @@ footer {
   }
 
   .newsletter-label {
-    font-size: 1.125rem;
+    font-size: 1.25rem;
   }
 
   /* Footer
