--- a/styles/exhibitions.css
+++ b/styles/exhibitions.css
@@ -4,8 +4,8 @@
 /* main 
 --------------------*/
 .space-section {
-  background-color: var(--dark);
-  color: var(--white);
+  background-color: var(--dark-bg);
+  color: var(--light-text-col);
   padding: 2rem 0;
   margin: 0 auto 2rem auto;
   box-shadow: 0 6px 12px #00000040;
@@ -16,8 +16,8 @@
   margin: 0 auto;
   display: flex;
   flex-direction: column;
-  background-color: var(--dark);
-  color: var(--white);
+  background-color: var(--dark-bg);
+  color: var(--light-text-col);
 }
 
 .space-container {
@@ -101,7 +101,7 @@
 }
 
 .space-divider {
-  background-color: var(white);
+  color: var(--light-text-col);
   height: 1px;
   width: 100%;
   margin: 3rem 0;
