--- a/styles/in_common.css
+++ b/styles/in_common.css
@@ -16,8 +16,8 @@ html, body {
 body {
   display: flex;
   flex-direction: column;
-  background-color: white;
-  color: var(--dark);
+  background-color: var(--content-bg);
+  color: var(--dark-text-col);
   font-family: var(--body-text);
   font-size: 1rem;
   width: 100%;
@@ -29,7 +29,7 @@ body {
 }
 
 main {
-  background-color: #d8d8d8;
+  background-color: var(--body-bg);
 }
 
 /* hr {
@@ -37,7 +37,7 @@ main {
 } */
 
 .fa {
-  color: var(--white);
+  color: var(--light-text-col);
   font-size: 2.5rem;
   display: inline-block;
 }
@@ -65,7 +65,7 @@ a {
   right: 2.5%;
   display: flex;
   flex-direction: column;
-  background-color: white;
+  background-color: var(--content-bg);
   color: #000;
   border-radius: 3px;
   display: none;
@@ -173,7 +173,7 @@ input:focus {
 }
 
 textarea {
-  font-family: var(--sofia);
+  font-family: var(--body-text);
   padding: 0.75rem;
   height: 250px;
 }
@@ -270,8 +270,8 @@ header {
   margin: 0;
   background-image: linear-gradient(to right, #C33764 0%, #1D2671 100%);
   /* background-image: linear-gradient(to right, #02AAB0 0%, #00CDAC 100%); */
-  color: var(--white);
-  font-family: var(--proxima-soft);
+  color: var(--content-bg);
+  font-family: var(--link-text);
   font-size: 1.5rem;
   display: flex;
   justify-content: flex-start;
@@ -470,7 +470,7 @@ ul li {
 }
 
 .header {
-  color: var(--dark);
+  color: var(--dark-text-col);
   margin-bottom: 2.5rem;
   padding-right: 5%;
 }
@@ -480,7 +480,7 @@ ul li {
   gap: 1rem;
   padding: 1rem 0;
   background: rgb(241,241,241);
-  background: linear-gradient(90deg, rgba(241,241,241,1) 0%, rgba(255,255,255,1) 100%); 
+  background: linear-gradient(90deg, rgba(235,236,242,1) 0%, rgba(255,255,255,1) 100%); 
 }
 
 .main-heading-left {
@@ -526,7 +526,7 @@ ul li {
   text-align: center;
   padding: 1rem;
   background: rgb(241,241,241);
-  background: linear-gradient(270deg, rgba(241,241,241,1) 0%, rgba(255,255,255,1) 100%);
+  background: linear-gradient(90deg, rgba(255,255,255,1) 0%, rgba(235,236,242,1) 100%);
 }
 
 .cta-wrapper p {
@@ -550,7 +550,7 @@ ul li {
   border-radius: 5px;
   background-image: linear-gradient(to right, #02AAB0 0%, #00CDAC 51%, #02AAB0 100%);
   background-size: 200% auto;
-  color: var(--white);
+  color: var(--light-text-col);
   padding: 0.5rem 2rem;
   margin: 0;
   box-shadow: 0 6px 12px #00000029;
@@ -565,7 +565,7 @@ ul li {
 
 .newsletter-wrapper {
   width: 100%;
-  background-color: var(--dark);
+  background-color: var(--dark-bg);
 }
 
 /* .blur {
@@ -638,7 +638,7 @@ ul li {
   background-color: var(--success-color);
   border: 2px solid var(--dark-green);
   border-radius: 5px;
-  color: white;
+  color: var(--light-text-col);
   display: none;
   margin-top: 1rem;
   padding: 0.5rem 1rem;
@@ -650,7 +650,7 @@ ul li {
 }
 
 .info-box-heading {
-  font-family: var(--proxima-soft);
+  font-family: var(--secondary-heading);
   font-size: 1.25rem;
   margin: 0;
   padding: 0;
@@ -718,7 +718,7 @@ footer {
   font-size: 1.125rem;
   margin: 0;
   padding: 0 0 0.5rem 0;
-  color: rgb(169, 255, 235);
+  color: var(--light-text-col);
 }
 
 .footer-icon-list {
